--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -89,6 +89,7 @@
             'bower/jquery/jquery.js'
             'bower/datatables/media/js/jquery.dataTables.js'
             'bower/datatables-bootstrap3-plugin/media/js/datatables-bootstrap3.js'
+            'bower/drmonty-datatables-plugins/sorting/date-euro.js'
             'bower/bootstrap/dist/js/bootstrap.js'
             'bower/bootstrap-select/dist/js/bootstrap-select.js'
             'bower/bootstrap-validator/js/validator.js'
