Arreglado bugs en profile y auction, intentando arreglar un commit problematico.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> y <span class="label label-extra">Oro</span> para adquirir <span class="label label-extra">Tropas</span>, <span class="label label-extra">Artefactos</span>, <span class="label label-extra">Héroes</span> y <span class="label label-extra">Hechizos</span>. Si pujas por un valor mucho mayor que el actual, puedes asegurarte de ganar varias sobrepujas. Al terminar, se te devolverá el <span class="label label-extra">Oro</span> sobrante menos el 10% de comisión.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> y <span class="label label-extra">Oro</span> para adquirir <span class="label label-extra">Tropas</span>, <span class="label label-extra">Artefactos</span>, <span class="label label-extra">Héroes</span> y <span class="label label-extra">Hechizos</span>. Si pujas por un valor mucho mayor que el actual, puedes asegurarte el ganar varias sobrepujas. Al terminar, se te devolverá el <span class="label label-extra">Oro</span> sobrante menos el 10% de comisión.</div>
                         </div>
                     </div>
                 </div>
